--- a/app/templates/performer.html
+++ b/app/templates/performer.html
@@ -188,8 +188,10 @@
                                 onclick="toggleAll(this)"></th>
                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2"
                             style="font-size: 0.75rem; letter-spacing: 0.5px;">Title</th>
+                        {% if performer.site == 'x' %}
                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2"
                             style="font-size: 0.75rem; letter-spacing: 0.5px;">Date</th>
+                        {% endif %}
                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2"
                             style="font-size: 0.75rem; letter-spacing: 0.5px;">Duration</th>
                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2"
